--- a/notes/notes.org
+++ b/notes/notes.org
@@ -595,18 +595,18 @@
       #+END_SRC
 
 ****** instanceof
-       The instanceof operator takes a plain object as its left-hand operand and a function as its right-hand operand. The question instanceof answers is: in the entire [[Prototype]] chain of a, does the object arbitrarily pointed to by Foo.prototype ever appear?
+       The instanceof operator takes a plain object as its left-hand operand and a function as its right-hand operand. The question instanceof answers is: in the entire Prototype chain of a, does the object arbitrarily pointed to by Foo.prototype ever appear?
        #+BEGIN_SRC js
         a instanceof Foo; // true
        #+END_SRC
 
 ****** isPrototypeOf
-       The question isPrototypeOf(..) answers is: in the entire [[Prototype]] chain of a, does Foo.prototype ever appear?
+       The question isPrototypeOf(..) answers is: in the entire Prototype chain of a, does Foo.prototype ever appear?
        #+BEGIN_SRC js
         Foo.prototype.isPrototypeOf( a ); // true
        #+END_SRC
 ****** getPrototypeOf
-       directly retrieve the [[Prototype]] of an object. 
+       directly retrieve the Prototype of an object. 
        #+BEGIN_SRC js
         Object.getPrototypeOf( a ); // Foo.prototype
        #+END_SRC
@@ -623,7 +623,7 @@
 
         bar.something(); // Tell me something good...
       #+END_SRC
-      Object.create(..) creates a new object (bar) linked to the object we specified (foo), which gives us all the power (delegation) of the [[Prototype]] mechanism, but without any of the unnecessary complication of new functions acting as classes and constructor calls, confusing .prototype and .constructor references, or any of that extra stuff.
+      Object.create(..) creates a new object (bar) linked to the object we specified (foo), which gives us all the power (delegation) of the Prototype mechanism, but without any of the unnecessary complication of new functions acting as classes and constructor calls, confusing .prototype and .constructor references, or any of that extra stuff.
 ** Behavior Delegation - the alternative view on prototypes
    Behavior Delegation means: let some object (XYZ) provide a delegation (to Task) for property or method references if not found on the object (XYZ).
 
@@ -652,9 +652,13 @@
      - Note: Avoid overriding methods or variables in this style
        - instead, use general functions to compose more specific functions in the child
 
+*** Objects Linked To Other Objects (OLOO)
+    - An alternative to OO
+    - another word for behavior delegation
+    - The "right" way of polymorphism in js
 *** Example: Class vs Behavior Delegation 
 **** Class:
-       #+BEGIN_SRC js
+     #+BEGIN_SRC js
          // Parent class
          function Controller() {
              this.errors = [];
@@ -746,9 +750,9 @@
          );
 
          auth.checkAuth();
-       #+END_SRC
+     #+END_SRC
 **** Behavior Delegation:
-       #+BEGIN_SRC js
+     #+BEGIN_SRC js
          var LoginController = {
              errors: [],
              getUser: function() {
@@ -810,11 +814,156 @@
              this.failure( "Auth Failed: " + err );
          };
 
-       #+END_SRC
+     #+END_SRC
 
 ** ES6 Classes
-   Really just the same old hacky solution, with a little syntactic help. Kindof a middle zone between class and behaviorial.
-   #+BEGIN_SRC js
+   Really just the same old hacky solution, with a little syntactic help. Kindof a middle zone between class and behavioral.
+
+*** Comparison:
+**** ES5
+     #+BEGIN_SRC js
+       // Parent class
+       function Widget(width,height) {
+           this.width = width || 50;
+           this.height = height || 50;
+           this.$elem = null;
+       }
+
+       Widget.prototype.render = function($where){
+           if (this.$elem) {
+               this.$elem.css( {
+                   width: this.width + "px",
+                   height: this.height + "px"
+               } ).appendTo( $where );
+           }
+       };
+
+       // Child class
+       function Button(width,height,label) {
+           // "super" constructor call
+           Widget.call( this, width, height );
+           this.label = label || "Default";
+
+           this.$elem = $( "<button>" ).text( this.label );
+       }
+
+       // make `Button` "inherit" from `Widget`
+       Button.prototype = Object.create( Widget.prototype );
+
+       // override base "inherited" `render(..)`
+       Button.prototype.render = function($where) {
+           // "super" call
+           Widget.prototype.render.call( this, $where );
+           this.$elem.click( this.onClick.bind( this ) );
+       };
+
+       Button.prototype.onClick = function(evt) {
+           console.log( "Button '" + this.label + "' clicked!" );
+       };
+
+       $( document ).ready( function(){
+           var $body = $( document.body );
+           var btn1 = new Button( 125, 30, "Hello" );
+           var btn2 = new Button( 150, 40, "World" );
+
+           btn1.render( $body );
+           btn2.render( $body );
+       } );
+     #+END_SRC
+
+**** ES6
+     #+BEGIN_SRC js
+       class Widget {
+           constructor(width,height) {
+               this.width = width || 50;
+               this.height = height || 50;
+               this.$elem = null;
+           }
+           render($where){
+               if (this.$elem) {
+                   this.$elem.css( {
+                       width: this.width + "px",
+                       height: this.height + "px"
+                   } ).appendTo( $where );
+               }
+           }
+       }
+
+       class Button extends Widget {
+           constructor(width,height,label) {
+               super( width, height );
+               this.label = label || "Default";
+               this.$elem = $( "<button>" ).text( this.label );
+           }
+           render($where) {
+               super.render( $where );
+               this.$elem.click( this.onClick.bind( this ) );
+           }
+           onClick(evt) {
+               console.log( "Button '" + this.label + "' clicked!" );
+           }
+       }
+
+       $( document ).ready( function(){
+           var $body = $( document.body );
+           var btn1 = new Button( 125, 30, "Hello" );
+           var btn2 = new Button( 150, 40, "World" );
+
+           btn1.render( $body );
+           btn2.render( $body );
+       } );
+     #+END_SRC
+*** OOPO/Behavioral Delegation way of doing it
+    #+BEGIN_SRC js
+      var Widget = {
+          init: function(width,height){
+              this.width = width || 50;
+              this.height = height || 50;
+              this.$elem = null;
+          },
+          insert: function($where){
+              if (this.$elem) {
+                  this.$elem.css( {
+                      width: this.width + "px",
+                      height: this.height + "px"
+                  } ).appendTo( $where );
+              }
+          }
+      };
+
+      var Button = Object.create( Widget );
+
+      Button.setup = function(width,height,label){
+          // delegated call
+          this.init( width, height );
+          this.label = label || "Default";
+
+          this.$elem = $( "<button>" ).text( this.label );
+      };
+      Button.build = function($where) {
+          // delegated call
+          this.insert( $where );
+          this.$elem.click( this.onClick.bind( this ) );
+      };
+      Button.onClick = function(evt) {
+          console.log( "Button '" + this.label + "' clicked!" );
+      };
+
+      $( document ).ready( function(){
+          var $body = $( document.body );
+
+          var btn1 = Object.create( Button );
+          btn1.setup( 125, 30, "Hello" );
+
+          var btn2 = Object.create( Button );
+          btn2.setup( 150, 40, "World" );
+
+          btn1.build( $body );
+          btn2.build( $body );
+      } );
+    #+END_SRC
+*** Same issues as the ES5 way of doing it:
+    #+BEGIN_SRC js
          class C {
              constructor() {
                  this.num = Math.random();
@@ -835,14 +984,91 @@
          c2.rand(); // "Random: 867"
 
          c1.rand(); // "Random: 432" -- oops!!!
-   #+END_SRC
-   #+BEGIN_SRC js
-   #+END_SRC
-   #+BEGIN_SRC js
-   #+END_SRC
-   #+BEGIN_SRC js
-   #+END_SRC
-   #+BEGIN_SRC js
-   #+END_SRC
-   #+BEGIN_SRC js
-   #+END_SRC
+    #+END_SRC
+
+* Types & Grammar
+** 7 types:
+   1. string
+   2. number
+   3. boolean 
+   4. null
+   5. undefined
+   6. object
+   7. symbol (new to ES6)
+*** Notes on the types:
+    - Values have a type, variables do not
+    - values are initialized to undefined until set otherwise
+** By Value or By Reference
+   - Simple scalar primitives (strings, numbers, etc.) are assigned/passed by value-copy,
+   - compound values (objects, etc.) are assigned/passed by reference-copy.
+   - A reference in JS points at a (shared) value, so if you have 10 different references, they are all always distinct references to a single shared value; none of them are references/pointers to each other.
+     - References are not like references/pointers in other languages -- they're never pointed at other variables/references, only at the underlying values.
+** Native Objects
+
+   Native objects are object wrappers around primitives that include some functions and values to use
+
+   1. String()
+   2. Number()
+   3. Boolean()
+   4. Array()
+   5. Object()
+   6. Function()
+   7. RegExp()
+   8. Date()
+   9. Error()
+   10. Symbol() -- added in ES6!
+*** Boxing your own objects
+    - might make sense to do this, but look at what happend:
+
+    #+BEGIN_SRC js
+      var a = new Boolean( false );
+      if (!a) {
+        console.log( "Oops" ); // never runs
+      }
+    #+END_SRC
+
+    - The right way:
+    #+BEGIN_SRC js
+      var a = "abc";
+      var b = new String( a );
+      var c = Object( a );
+
+      typeof a; // "string"
+      typeof b; // "object"
+      typeof c; // "object"
+
+      b instanceof String; // true
+      c instanceof String; // true
+
+      Object.prototype.toString.call( b ); // "[object String]"
+      Object.prototype.toString.call( c ); // "[object String]"
+    #+END_SRC
+*** Unboxing
+    #+BEGIN_SRC js
+      var a = new String( "abc" );
+      var b = new Number( 42 );
+      var c = new Boolean( true );
+
+      a.valueOf(); // "abc"
+      b.valueOf(); // 42
+      c.valueOf(); // true
+    #+END_SRC
+
+    #+BEGIN_SRC js
+    #+END_SRC
+    #+BEGIN_SRC js
+    #+END_SRC
+    #+BEGIN_SRC js
+    #+END_SRC
+    #+BEGIN_SRC js
+    #+END_SRC
+    #+BEGIN_SRC js
+    #+END_SRC
+    #+BEGIN_SRC js
+    #+END_SRC
+    #+BEGIN_SRC js
+    #+END_SRC
+    #+BEGIN_SRC js
+    #+END_SRC
+    #+BEGIN_SRC js
+    #+END_SRC
