--- a/notes/notes.org
+++ b/notes/notes.org
@@ -1052,7 +1052,7 @@
       a.valueOf(); // "abc"
       b.valueOf(); // 42
       c.valueOf(); // true
-      #+END_SRC
+    #+END_SRC
 
 * Async and Performance
 ** Asynchrony
@@ -1095,18 +1095,441 @@
          ajax( "http://some.url.2", response );
        #+END_SRC
 ** Callbacks
+   A callback is a function that is tied to the completion of another function. This creates a kind of asyncrony, as the program continues executing after the parent function starts, then execution is interrupted the callback function is "called back" after it is done.
+*** Inversion of Control
+    The ad-hoc async of callbacks make for some weird behavior. If the parent function does not call the callback appropriately, you can end up with a problem. 
 
-       #+BEGIN_SRC js
+    This is called "inversion of control." So-called because the control is taken from the child function (what we're writing in our program) and giving it to the parent function (which may be some kind of external API call that we have no control over). As a result, we have no power over how the callback is called, which can lead to:
+*** Problems
+    1. Call the callback too early (before it's been tracked)
+    2. Call the callback too late (or never)
+    3. Call the callback too few or too many times (like the problem you encountered!)
+    4. Fail to pass along any necessary environment/parameters to your callback
+    5. Swallow any errors/exceptions that may happen
+*** Solutions
+    Promises address these problems, so just use that. Otherwise, you can:
+    1. Double callback (Promises use something like this)
+       - Two callbacks are provided, one function for success, another for error
+    2. Double parameter callback ("Node Style")
+       - The callback function is given two parameters, error and data.
+       - The callback can check for error==true up front, and then go on handling data if no error
+    3. Some other thing - come back here
+** Promises
+*** Inverting Inversion of Control
+    Promises uninvert the inversion of control caused by callbacks. They give the power back to the waiting function, and allow the parent function to be used as part of a whole, rather than dictating the entire process.
+*** "Events"
+    You can think of promises as events and event listeners in a way. The parent process creates and event that the children wait for before executing. When a promise returns, it will "resolve" or "reject" the returned value ("resolve(2)")
+    #+BEGIN_SRC js
+     function foo(x) {
+         // start doing something that could take a while
+
+         // make a `listener` event notification
+         // capability to return
+
+         return listener;
+     }
+
+     var evt = foo( 42 );
+
+     evt.on( "completion", function(){
+         // now we can do the next step!
+     } );
+
+     evt.on( "failure", function(err){
+         // oops, something went wrong in `foo(..)`
+     } );
+    #+END_SRC
+
+    The events are not really events, but the principle is the same.
+    #+BEGIN_SRC js
+      function bar(fooPromise) {
+          // listen for `foo(..)` to complete
+          fooPromise.then(
+              function(){
+                  // `foo(..)` has now finished, so
+                  // do `bar(..)`'s task
+              },
+              function(){
+                  // oops, something went wrong in `foo(..)`
+              }
+          );
+      }
+
+      // ditto for `baz(..)`
+
+
+      function foo(x) {
+          // start doing something that could take a while
+
+          // construct and return a promise
+          return new Promise( function(resolve,reject){
+              // eventually, call `resolve(..)` or `reject(..)`,
+              // which are the resolution callbacks for
+              // the promise.
+          } );
+      }
+
+      var p = foo( 42 );
+
+      bar( p );
+
+      baz( p );
+
+    #+END_SRC
+    or
+    #+BEGIN_SRC js
+      function bar() {
+          // `foo(..)` has definitely finished, so
+          // do `bar(..)`'s task
+      }
+
+      function oopsBar() {
+          // oops, something went wrong in `foo(..)`,
+          // so `bar(..)` didn't run
+      }
+
+      // ditto for `baz()` and `oopsBaz()`
+
+
+      function foo(x) {
+          // start doing something that could take a while
+
+          // construct and return a promise
+          return new Promise( function(resolve,reject){
+              // eventually, call `resolve(..)` or `reject(..)`,
+              // which are the resolution callbacks for
+              // the promise.
+          } );
+      }
+
+      var p = foo( 42 );
+
+      p.then( bar, oopsBar );
+
+      p.then( baz, oopsBaz );
+      #+END_SRC
+    Promises are immutable, and "then" can be called on them wherever. In the first example, "then" is called inside bar and baz. In the second, it is called in the global scope, on p itself. Both work identically, and both are correct. The proper use will be situational.
+*** Callback Problems Revisited
+    The inversion of control in callbacks causes problems of trusting an api call to work properly, and avoid: 
+
+    1. Call the callback too early (before it's been tracked)
+    2. Call the callback too late (or never)
+    3. Call the callback too few or too many times (like the problem you encountered!)
+    4. Fail to pass along any necessary environment/parameters to your callback
+    5. Swallow any errors/exceptions that may happen
+
+    These problems are addressed by promises:
+**** Call too early
+     "then" acts as a barrier to forcing synchronous calls, ensuring that all calls are async and do not run until the promise resolves
+**** Call too late
+     It's not possible for synchronous observation, so it's not possible for a synchronous chain of tasks to run in such a way to in effect "delay" another callback from happening as expected.
+**** Never call
+     You can specify a max time for a promise to return with "Promise.race"
+    #+BEGIN_SRC js
+      // a utility for timing out a Promise
+      function timeoutPromise(delay) {
+          return new Promise( function(resolve,reject){
+              setTimeout( function(){
+                  reject( "Timeout!" );
+              }, delay );
+          } );
+      }
+
+      // setup a timeout for `foo()`
+      Promise.race( [
+          foo(),                  // attempt `foo()`
+          timeoutPromise( 3000 )  // give it 3 seconds
+      ] )
+      .then(
+          function(){
+              // `foo(..)` fulfilled in time!
+          },
+          function(err){
+              // either `foo()` rejected, or it just
+              // didn't finish in time, so inspect
+              // `err` to know which
+          }
+      );
+    #+END_SRC
+**** Call too much or too little
+     Promises always resolve exactly 1 time with either resolve or reject. Too few is covered above under "Never call." 
+     The "too many" case is easy to explain. If for some reason the Promise creation code tries to call resolve(..) or reject(..) multiple times, or tries to call both, the Promise will accept only the first resolution, and will silently ignore any subsequent attempts.
+**** Fail to pass parameters/environment
+Promises can have, at most, one resolution value (fulfillment or rejection).
+
+Something to be aware of: If you call resolve(..) or reject(..) with multiple parameters, all subsequent parameters beyond the first will be silently ignored
+**** Swallowing errors
+     Errors are always passed down the promise chain.
+
+    #+BEGIN_SRC js
+      var p = new Promise( function(resolve,reject){
+          foo.bar();  // `foo` is not defined, so error!
+          resolve( 42 );  // never gets here :(
+      } );
+
+      p.then(
+          function fulfilled(){
+              // never gets here :(
+          },
+          function rejected(err){
+              // `err` will be a `TypeError` exception object
+              // from the `foo.bar()` line.
+          }
+      );
+          #+END_SRC
+
+    Here, the promise created by p.then() is not caught, so the error is not caught.
+    #+BEGIN_SRC js
+      var p = new Promise( function(resolve,reject){
+          resolve( 42 );
+      } );
+
+      p.then(
+          function fulfilled(msg){
+              foo.bar();
+              console.log( msg ); // never gets here :(
+          },
+          function rejected(err){
+              // never gets here either :(
+          }
+      );
+    #+END_SRC
+**** Lingering Trust Problems
+     Since the definition of promises is a loose, duck-typed search for a "then"able, you can get some strange responses when the "then" property is directly changed.
+     #+BEGIN_SRC js
+      var p = {
+          then: function(cb,errcb) {
+              cb( 42 );
+              errcb( "evil laugh" );
+          }
+      };
+
+      p
+      .then(
+          function fulfilled(val){
+              console.log( val ); // 42
+          },
+          function rejected(err){
+              // oops, shouldn't have run
+              console.log( err ); // evil laugh
+          }
+      );
+     #+END_SRC
+     Promise.resolve() will fix this, running through the "thens" until a genuine promise is found.
+     #+BEGIN_SRC js
+      // don't just do this:
+      foo( 42 )
+      .then( function(v){
+          console.log( v );
+      } );
+
+      // instead, do this:
+      Promise.resolve( foo( 42 ) )
+      .then( function(v){
+          console.log( v );
+      } );
+     #+END_SRC
+     It kindof works as a ditch-effort wrapper to make sure the promise is a trustable, proper promise
+*** Promise Chain
+    Calling "then" on a promise actually returns a new promise itself. We can run down this sequence to chain events together. This can work in much the same way as chaining functions, with the return of one acting as the input for another.
+     #+BEGIN_SRC js
+       var p = Promise.resolve( 21 );
+
+       var p2 = p.then( function(v){
+           console.log( v );   // 21
+
+           // fulfill `p2` with value `42`
+           return v * 2;
+       } );
+
+       // chain off `p2`
+       p2.then( function(v){
+           console.log( v );   // 42
+       } );
        #+END_SRC
-       #+BEGIN_SRC js
-       #+END_SRC
-       #+BEGIN_SRC js
-       #+END_SRC
-       #+BEGIN_SRC js
-       #+END_SRC
-       #+BEGIN_SRC js
-       #+END_SRC
-       #+BEGIN_SRC js
-       #+END_SRC
-       #+BEGIN_SRC js
-       #+END_SRC
+     The p2 temp value is not strictly necessary
+     #+BEGIN_SRC js
+       var p = Promise.resolve( 21 );
+
+       p
+       .then( function(v){
+           console.log( v );   // 21
+
+           // fulfill the chained promise with value `42`
+           return v * 2;
+       } )
+       // here's the chained promise
+       .then( function(v){
+           console.log( v );   // 42
+       } );
+     #+END_SRC
+To make sure the chained process happen asynchronously and in order of calling, make sure to explicitly return a promise in parts of the chain that need async support.
+     #+BEGIN_SRC js
+       var p = Promise.resolve( 21 );
+
+       p.then( function(v){
+           console.log( v );   // 21
+
+           // create a promise to return
+           return new Promise( function(resolve,reject){
+               // introduce asynchrony!
+               setTimeout( function(){
+                   // fulfill with value `42`
+                   resolve( v * 2 );
+               }, 100 );
+           } );
+       } )
+       .then( function(v){
+           // runs after the 100ms delay in the previous step
+           console.log( v );   // 42
+       } );
+     #+END_SRC
+or with an AJAX example
+     #+BEGIN_SRC js
+       // assume an `ajax( {url}, {callback} )` utility
+
+       // Promise-aware ajax
+       function request(url) {
+           return new Promise( function(resolve,reject){
+               // the `ajax(..)` callback should be our
+               // promise's `resolve(..)` function
+               ajax( url, resolve );
+           } );
+       }
+       request( "http://some.url.1/" )
+       .then( function(response1){
+           return request( "http://some.url.2/?v=" + response1 );
+       } )
+       .then( function(response2){
+           console.log( response2 );
+       } );
+     #+END_SRC
+*** Terms: fulfill, resolve, and reject
+    Generally think of the three terms as: reject for failure, fulfill for success, and resolve for resolution through either rejection or fulfillment.
+
+    Parameters of a Promise can have any name, but are set up with the first as fulfilling the promise and the second for rejecting the promise. 
+
+    #+BEGIN_SRC js
+       var p = new Promise( function(X,Y){
+           // X() for fulfillment
+           // Y() for rejection
+       } );
+    #+END_SRC
+**** Reject
+     Easy. The second parameter of a promise. Any error in the promise will trigger reject. The second parameter should always be called "reject".
+**** Resolve
+     As in Promise.resolve(), resolve simply takes a promise and resolves it to trigger fulfillment or rejection.
+
+     #+BEGIN_SRC js
+       var rejectedTh = {
+           then: function(resolved,rejected) {
+               rejected( "Oops" );
+           }
+       };
+
+       var rejectedPr = Promise.resolve( rejectedTh );
+     #+END_SRC
+     In this sense, the promise itself should be given a first parameter labeled "resolve."
+**** Fulfill
+     After a promise has been returned, it will be either fulfilled or rejected.
+     #+BEGIN_SRC js
+       var rejectedPr = new Promise( function(resolve,reject){
+           // resolve this promise with a rejected promise
+           resolve( Promise.reject( "Oops" ) );
+       } );
+
+       rejectedPr.then(
+           function fulfilled(){
+               // never gets here
+           },
+           function rejected(err){
+               console.log( err ); // "Oops"
+           }
+       );
+     #+END_SRC
+     As a result, the functions supplied to "then" should be labeled fulfill and reject.
+
+     Note: the ES6 specification uses onFulfilled(..) and onRejected(..) to label these two callbacks
+*** Errors
+    - Can't use try-catch, as it only works for synchronous code.
+    - Errors in the "then" block won't be caught with the reject function, as they are errors on the promise created by "then." They will be passed along the promise chain, which may jvery well not exist.
+**** Solution 1: catch away
+
+     One solution is to always include a catch block under your last "then"
+     #+BEGIN_SRC js
+       var p = Promise.resolve( 42 );
+
+       p.then(
+           function fulfilled(msg){
+               // numbers don't have string functions,
+               // so will throw an error
+               console.log( msg.toLowerCase() );
+           }
+       )
+           .catch( handleErrors );
+     #+END_SRC
+     The problem here is that any errors in handleErrors will not be caught. You would need another catch block underneath, and another, and another....
+
+     However, as long as you make the final catch a super simple block, you should be good
+**** Solution 2: add to ES6
+     This is weird and complex and scary and I don't think I'll need it any time soon
+*** Alternative flow to the promise chain
+**** Promise.all([])
+     Pass an array of promises to wait on
+     #+BEGIN_SRC js
+       // `request(..)` is a Promise-aware Ajax utility,
+       // like we defined earlier in the chapter
+
+       var p1 = request( "http://some.url.1/" );
+       var p2 = request( "http://some.url.2/" );
+
+       Promise.all( [p1,p2] )
+       .then( function(msgs){
+           // both `p1` and `p2` fulfill and pass in
+           // their messages here
+           return request(
+               "http://some.url.3/?v=" + msgs.join(",")
+           );
+       } )
+       .then( function(msg){
+           console.log( msg );
+       } );
+     #+END_SRC
+**** Promise.race([ .. ])
+Not to be confused with a race condition, this works like Promise.all, but only waits for the first one to finish, not all of them.
+     #+BEGIN_SRC js
+       // `request(..)` is a Promise-aware Ajax utility,
+       // like we defined earlier in the chapter
+
+       var p1 = request( "http://some.url.1/" );
+       var p2 = request( "http://some.url.2/" );
+
+       Promise.race( [p1,p2] )
+       .then( function(msg){
+           // either `p1` or `p2` will win the race
+           return request(
+               "http://some.url.3/?v=" + msg
+           );
+       } )
+       .then( function(msg){
+           console.log( msg );
+       } );
+     #+END_SRC
+     #+BEGIN_SRC js
+     #+END_SRC
+     #+BEGIN_SRC js
+     #+END_SRC
+     #+BEGIN_SRC js
+     #+END_SRC
+     #+BEGIN_SRC js
+     #+END_SRC
+     #+BEGIN_SRC js
+     #+END_SRC
+     #+BEGIN_SRC js
+     #+END_SRC
+     #+BEGIN_SRC js
+     #+END_SRC
+     #+BEGIN_SRC js
+     #+END_SRC
+     #+BEGIN_SRC js
+     #+END_SRC
